# configurator

./: CMakeLists.txt  Configurator.launch  Makefile.Ubuntu  Makefile.inc  README.md
configurator/: .cproject  .project  Makefile  Makefile.Ubuntu  README.md  log.conf
configurator/debug-linux-x86/: ActivityConfigurator.d  BusClient.d  Configurator.d  DbKindConfigurator.d  DbPermissionsConfigurator.d  FileCacheConfigurator.d  configurator
configurator/files/etc/event.d/: configurator
configurator/service/: com.palm.configurator.json.prv
configurator/src/: BusClient.cpp  BusClient.h  Configurator.h  DbKindConfigurator.cpp  DbKindConfigurator.h  DbPermissionsConfigurator.cpp  DbPermissionsConfigurator.h  FileCacheConfigurator.cpp  FileCacheConfigurator.h
desktop-support/: com.palm.configurator.json.prv  com.palm.configurator.service.prv  configurator-async.upstart  configurator.upstart
files/etc/event.d/: configurator-async
files/launch/: configurator-async.conf.in  configurator-async.in  configurator.conf.in  configurator.in
files/sysbus/: com.palm.configurator.json.prv.in  com.palm.configurator.service.prv.in
service/: com.palm.configurator.service.prv
src/: ActivityConfigurator.cpp  ActivityConfigurator.h  BusClient.cpp  BusClient.h  Configurator.cpp  Configurator.h.in  CoreDefs.h  DbKindConfigurator.cpp  DbKindConfigurator.h  DbPermissionsConfigurator.cpp  DbPermissionsConfigurator.h  FileCacheConfigurator.cpp  FileCacheConfigurator.h  Flags.h  Log.cpp  Log.h
